--- a/vite-project/src/pages/Login/style.css
+++ b/vite-project/src/pages/Login/style.css
@@ -5,4 +5,40 @@
   display: flex;
   align-items: center;
   justify-content: center;
+  flex-direction: column;
+}
+
+.ucuLogo {
+  width: 180px;
+}
+
+.logoTitulo {
+  margin-bottom: 4rem;
+  margin-top: 2rem;
+}
+
+div.loginDiv {
+  padding: 2rem;
+  width: 500px;
+  height: 600px;
+}
+
+.loginLabel {
+  text-align: left;
+  margin-top: 2rem;
+}
+
+.passwordEye {
+  position: absolute;
+  right: 12px;
+  top: 70%;
+  transform: translateY(-70%);
+  cursor: pointer;
+}
+
+.botonSiguiente {
+  width: 100%;
+  background-color: rgb(53 98 224);
+  height: 47px;
+  color: white;
 }
