--- a/vite-project/src/components/Student/Student.module.css
+++ b/vite-project/src/components/Student/Student.module.css
@@ -1,11 +1,11 @@
-
 .info {
     display: flex;
     flex-wrap: wrap;
+    align-items: center;
     gap: 25px;
 }
 
-.info-and-buttons {
+.infoandbuttons {
     display: flex;
     flex-direction: row;
     background-color: #e0e1dd;
@@ -21,11 +21,11 @@
     flex-direction: row;
 }
 
-.button.delete-button {
+.deletebutton {
     background-color: #780000;
 }
 
-.button.edit-button {
+.editbutton {
     background-color: rgb(52 92 173);
 }
 
@@ -33,7 +33,9 @@
     color: white; 
 }
 
-.button.delete-button, .button.edit-button {
+.deletebutton, .editbutton {
     border-radius: 50px;
     padding: 10px;
+    width: 40px; 
+    height: 40px  
 }
