--- a/vite-project/src/components/ScheduleItem/style.css
+++ b/vite-project/src/components/ScheduleItem/style.css
@@ -1,14 +1,16 @@
 .boxHorario {
   height: 300px;
   width: 350px;
-  background-color: rgb(207 218 241);
+  background-color: rgb(212, 229, 249);
   border-radius: 20px;
   transition: 0.5s;
   padding: 3rem;
 }
 
 .boxHorario:hover {
-  box-shadow: 0 0 0px 3px rgb(16, 74, 149);
+  transform: scale(1.1);
+  transition: 0.5s;
+  background-color: rgb(137, 163, 194);
 }
 
 .infoSummary {
