--- a/vite-project/src/components/Activity/Activity.module.css
+++ b/vite-project/src/components/Activity/Activity.module.css
@@ -1,35 +1,41 @@
 .info {
-    display: flex;
-    flex-wrap: wrap;
-    align-items: center;
-    gap: 25px;
+  display: flex;
+  flex-wrap: wrap;
+  align-items: center;
+  gap: 25px;
 }
 
 .infoandbuttons {
-    display: flex;
-    flex-direction: row;
-    background-color: #e0e1dd;
-    padding: 10px;
-    border-radius: 15px;
-    gap: 20px; 
-    margin-top: 10px;
-    justify-content: space-between;
+  display: flex;
+  flex-direction: row;
+  background-color: #e0e1dd;
+  padding: 10px;
+  border-radius: 15px;
+  gap: 20px;
+  margin-top: 10px;
+  justify-content: space-between;
 }
 
 .buttons {
-    display: flex;
-    flex-direction: row;
+  display: flex;
+  flex-direction: row;
 }
 
 .editbutton {
-    background-color: rgb(52 92 173);
-    border-radius: 50px;
-    padding: 10px;
-    width: 40px; 
-    height: 40px  
+  background-color: rgb(52 92 173);
+  border-radius: 50px;
+  padding: 10px;
+  width: 40px;
+  height: 40px;
+  transition: 0.5s;
+}
+
+.editbutton:hover {
+  transform: scale(1.1);
+  transition: 0.5s;
+  background-color: rgb(84, 130, 223);
 }
 
 .pencil {
-    color: white; 
+  color: white;
 }
-
