--- a/vite-project/src/components/Instructors/Instructors.module.css
+++ b/vite-project/src/components/Instructors/Instructors.module.css
@@ -1,33 +1,39 @@
-.instructorsAndAdd{
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    align-items: center;
+.instructorsAndAdd {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
 }
 
 .allInstructors {
-    margin-top: 10px;
-    gap: 10px; 
-    overflow: auto;
-    max-height: 300px;
+  margin-top: 10px;
+  gap: 10px;
+  overflow: auto;
+  max-height: 300px;
 }
 
 .add {
-    font-size: 20px;
-    color: white;
-    justify-self: center;
-    align-self: center;
+  font-size: 20px;
+  color: white;
+  justify-self: center;
+  align-self: center;
 }
 
 .addButton {
-    background-color: #669bbc;
-    border-radius: 50px;
-    padding: 10px;
-    width: 40px; 
-    height: 40px 
+  background-color: #5ca7d3;
+  border-radius: 50px;
+  padding: 10px;
+  transition: 0.5s;
+  width: 40px;
+  height: 40px;
+}
+.addButton:hover {
+  background-color: #77c1ec;
+  transform: scale(1.1);
+  transition: 0.5s;
 }
 
-.instructorsTitle{
-    font-weight: 800;
-    font-size: 35px;
+.instructorsTitle {
+  font-weight: 800;
+  font-size: 35px;
 }
