--- a/vite-project/src/components/Students/Students.css
+++ b/vite-project/src/components/Students/Students.css
@@ -1,29 +1,38 @@
-.students-and-add{
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    align-items: center;
+.students-and-add {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
 }
 
 .all-students {
-    margin-top: 10px;
-    gap: 10px; 
-    overflow: auto;
-    max-height: 300px;
+  margin-top: 10px;
+  gap: 10px;
+  overflow: auto;
+  max-height: 300px;
 }
 
 .add {
-    font-size: 20px;
-    color: white;
+  font-size: 20px;
+  color: white;
 }
 
-.button.add-button {
-    background-color: #669bbc;
-    border-radius: 50px;
-    padding: 10px;
+.add-button {
+  background-color: #3b91c4;
+  border-radius: 50px;
+  padding: 10px;
+  transition: 0.5s;
+  width: 40px;
+  height: 40px;
 }
 
-.students-title{
-    font-weight: 800;
-    font-size: 35px;
+.add-button:hover {
+  background-color: #4bb0ea;
+  transform: scale(1.1);
+  transition: 0.5s;
+}
+
+.students-title {
+  font-weight: 800;
+  font-size: 35px;
 }
