--- a/vite-project/src/pages/HomePage/HomePage.css
+++ b/vite-project/src/pages/HomePage/HomePage.css
@@ -1,16 +1,22 @@
 .homePage {
-    background-image: url(../../assets/fondoHomePage.png);
-    min-width: 100%;
-    height: 100vh;
+  background-image: url(../../assets/fondoHomePage.png);
+  min-width: 100%;
+  height: 100vh;
 }
 
 .home-container {
-    padding: 50px;
+  padding: 50px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  align-content: center;
+  justify-content: center;
+  text-align: center;
 }
 
 .selection-p {
-    margin-bottom: 50px;
-    color: rgb(52 92 173); 
-    font-weight: bold;
-    font-size: 20px;
+  margin-bottom: 50px;
+  color: rgb(52 92 173);
+  font-weight: bold;
+  font-size: 20px;
 }
