--- a/vite-project/src/components/Instructors/Instructors.module.css
+++ b/vite-project/src/components/Instructors/Instructors.module.css
@@ -11,24 +11,22 @@
   overflow: auto;
   max-height: 300px;
 }
-
 .add {
   font-size: 20px;
   color: white;
-  justify-self: center;
-  align-self: center;
 }
 
 .addButton {
-  background-color: #5ca7d3;
+  background-color: #3b91c4;
   border-radius: 50px;
   padding: 10px;
   transition: 0.5s;
   width: 40px;
   height: 40px;
 }
+
 .addButton:hover {
-  background-color: #77c1ec;
+  background-color: #4bb0ea;
   transform: scale(1.1);
   transition: 0.5s;
 }
