--- a/vite-project/src/components/Shift/Shift.module.css
+++ b/vite-project/src/components/Shift/Shift.module.css
@@ -1,41 +1,61 @@
 .info {
-    display: flex;
-    flex-wrap: wrap;
-    align-items: center;
-    gap: 25px;
+  display: flex;
+  flex-wrap: wrap;
+  align-items: center;
+  gap: 25px;
 }
 
 .infoandbuttons {
-    display: flex;
-    flex-direction: row;
-    background-color: #e0e1dd;
-    padding: 10px;
-    border-radius: 15px;
-    gap: 20px; 
-    margin-top: 10px;
-    justify-content: space-between;
+  display: flex;
+  flex-direction: row;
+  background-color: #e0e1dd;
+  padding: 10px;
+  border-radius: 15px;
+  gap: 20px;
+  margin-top: 10px;
+  justify-content: space-between;
 }
 
 .buttons {
-    display: flex;
-    flex-direction: row;
+  display: flex;
+  flex-direction: row;
 }
 
 .deletebutton {
-    background-color: #780000;
+  background-color: #780000;
+  transition: 0.5s;
+  display: flex;
+  align-items: center;
+  align-content: center;
+  justify-content: center;
+}
+
+.deletebutton:hover {
+  transform: scale(1.1);
+  transition: 0.5s;
+  background-color: #d44141;
 }
 
 .editbutton {
-    background-color: rgb(52 92 173);
+  background-color: rgb(52 92 173);
+  transition: 0.5s;
 }
 
-.trash,.pencil {
-    color: white; 
+.editbutton:hover {
+  transform: scale(1.1);
+  transition: 0.5s;
+  background-color: rgb(84, 130, 223);
 }
 
-.deletebutton, .editbutton {
-    border-radius: 50px;
-    padding: 10px;
-    width: 40px; 
-    height: 40px  
+.trash,
+.pencil {
+  color: white;
+}
+
+.deletebutton,
+.editbutton {
+  border-radius: 50px;
+  padding: 10px;
+  width: 40px;
+  height: 40px;
 }
