--- a/vite-project/src/components/Shifts/Shifts.module.css
+++ b/vite-project/src/components/Shifts/Shifts.module.css
@@ -1,33 +1,38 @@
-.shiftsAndAdd{
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    align-items: center;
+.shiftsAndAdd {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
 }
 
 .allShifts {
-    margin-top: 10px;
-    gap: 10px; 
-    overflow: auto;
-    max-height: 300px;
+  margin-top: 10px;
+  gap: 10px;
+  overflow: auto;
+  max-height: 300px;
 }
 
 .add {
-    font-size: 20px;
-    color: white;
-    justify-self: center;
-    align-self: center;
+  font-size: 20px;
+  color: white;
 }
 
 .addButton {
-    background-color: #669bbc;
-    border-radius: 50px;
-    padding: 10px;
-    width: 40px; 
-    height: 40px 
+  background-color: #3b91c4;
+  border-radius: 50px;
+  padding: 10px;
+  transition: 0.5s;
+  width: 40px;
+  height: 40px;
 }
 
-.shiftsTitle{
-    font-weight: 800;
-    font-size: 35px;
+.addButton:hover {
+  background-color: #4bb0ea;
+  transform: scale(1.1);
+  transition: 0.5s;
+}
+
+.shiftsTitle {
+  font-weight: 800;
+  font-size: 35px;
 }
