--- a/vite-project/src/pages/Schedule/style.css
+++ b/vite-project/src/pages/Schedule/style.css
@@ -1,12 +1,30 @@
 .schedule {
   background-image: url(../../assets/fondoHomePage.png);
-  height: 100vh;
+  height: 100%;
 }
 
 .horarios {
   display: flex;
   flex-direction: row;
+  flex-wrap: wrap;
   width: 100%;
   justify-content: space-evenly;
   margin-top: 2rem;
+
+}
+
+.date-input {
+  width: 400px;
+  height: 60px;
+  font-size: 18px;
+  border: 2px solid #ccc;
+  border-radius: 50px;
+  padding: 10px;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+  outline: none;
+  transition: border-color 0.5s;
+}
+
+.date-input:hover {
+  border-color: rgb(137, 163, 194);
 }
