--- a/vite-project/src/pages/HomePage/HomePage.css
+++ b/vite-project/src/pages/HomePage/HomePage.css
@@ -1,7 +1,7 @@
 .homePage {
   background-image: url(../../assets/fondoHomePage.png);
   min-width: 100%;
-  height: 100vh;
+  height: 100%;
 }
 
 .home-container {
