--- a/vite-project/src/components/EditModalLessons/EditModalLessons.module.css
+++ b/vite-project/src/components/EditModalLessons/EditModalLessons.module.css
@@ -106,3 +106,9 @@
   transform: scale(1.1);
   transition: 0.5s;
 }
+
+input:disabled {
+  opacity: 0.6;
+  cursor: not-allowed; 
+  background-color: #f0f0f0; 
+}
