--- a/vite-project/src/components/Lesson/Lesson.module.css
+++ b/vite-project/src/components/Lesson/Lesson.module.css
@@ -5,9 +5,9 @@
   gap: 25px;
 }
 
-.infoandbuttons {
+.lessonInfo {
   display: flex;
-  flex-direction: row;
+  flex-direction: column;
   background-color: #e0e1dd;
   padding: 10px;
   border-radius: 15px;
@@ -58,4 +58,22 @@
   padding: 10px;
   width: 40px;
   height: 40px;
+}
+
+.info1 {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+}
+
+.info2 {
+  display: flex;
+}
+
+.form input {
+  height: 40px;
+  width: 150px;
+  border: 2px solid rgb(81, 81, 203);
+  border-radius: 25px;
+  padding: 1rem;
 }
