--- a/vite-project/src/pages/Administration/Administration.css
+++ b/vite-project/src/pages/Administration/Administration.css
@@ -1,7 +1,7 @@
 .admin-page {
   background-image: url(../../assets/fondoHomePage.png);
   min-width: 100%;
-  height: 100%;
+  height: 100vh;
 }
 
 .admin-container {
@@ -9,4 +9,10 @@
   display: flex;
   flex-direction: column;
   gap: 30px;
+}
+
+.error {
+  font-weight: bold;
+  font-size: 25px;
+  color: #780000
 }
