--- a/vite-project/src/components/Lesson/Lesson.module.css
+++ b/vite-project/src/components/Lesson/Lesson.module.css
@@ -21,20 +21,6 @@
   flex-direction: row;
 }
 
-.deletebutton {
-  background-color: #780000;
-  transition: 0.5s;
-  display: flex;
-  align-items: center;
-  align-content: center;
-  justify-content: center;
-}
-
-.deletebutton:hover {
-  transform: scale(1.1);
-  transition: 0.5s;
-  background-color: #d44141;
-}
 
 .editbutton {
   background-color: rgb(52 92 173);
@@ -76,4 +62,38 @@
   border: 2px solid rgb(81, 81, 203);
   border-radius: 25px;
   padding: 1rem;
+}
+
+.enrollments ul {
+  list-style-type: none;
+  padding: 0;
+  margin: 0;
+}
+
+.enrollments li {
+  display: flex;
+  justify-content: space-between; 
+  align-items: center; 
+  background-color: #f7f7f7;
+  padding: 10px;
+  border-radius: 10px;
+  margin-bottom: 10px;
+}
+
+.deletebutton {
+  background-color: #780000;
+  transition: 0.5s;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border-radius: 50%;
+  padding: 10px;
+  width: 40px;
+  height: 40px;
+}
+
+.deletebutton:hover {
+  transform: scale(1.1);
+  transition: 0.5s;
+  background-color: #d44141;
 }
