--- a/vite-project/src/pages/Equipment/Equipment.css
+++ b/vite-project/src/pages/Equipment/Equipment.css
@@ -1,7 +1,7 @@
 .equipmentPage {
     background-image: url(../../assets/fondoHomePage.png);
     min-width: 100%;
-    height: 100vh;
+    height: 100%;
 }
 
 .equipment-container {
@@ -16,12 +16,11 @@
 
 .next {
     font-size: 25px;
-    color: white;
+    color: rgb(52 92 173);
 }
 
-.next-button {
+/* .next-button {
     background-color: rgb(52 92 173);
     color: white;
     border-radius: 20px;
-   
-}
+} */
