--- a/vite-project/src/components/Lesson/Lesson.module.css
+++ b/vite-project/src/components/Lesson/Lesson.module.css
@@ -54,6 +54,7 @@
 
 .info2 {
   display: flex;
+  justify-content: space-between;
 }
 
 .form input {
@@ -96,4 +97,31 @@
   transform: scale(1.1);
   transition: 0.5s;
   background-color: #d44141;
+}
+
+.form {
+  display: flex;
+  flex-direction: row;
+  gap: 20px;
+  align-items: center;
+}
+
+.add {
+  font-size: 20px;
+  color: white;
+}
+
+.addButton {
+  background-color: #3b91c4;
+  border-radius: 50px;
+  padding: 10px;
+  transition: 0.5s;
+  width: 40px;
+  height: 40px;
+}
+
+.addButton:hover {
+  background-color: #4bb0ea;
+  transform: scale(1.1);
+  transition: 0.5s;
 }
