--- a/vite-project/src/pages/Administration/Administration.css
+++ b/vite-project/src/pages/Administration/Administration.css
@@ -1,7 +1,7 @@
 .admin-page {
   background-image: url(../../assets/fondoHomePage.png);
   min-width: 100%;
-  height: 100vh;
+  height: 100%;
 }
 
 .admin-container {
